# OOP_Assignment_2

./: .gitignore  CMakeLists.txt  README.md  UIManager.cpp  inf_int.cpp  inf_int.h  inf_int_test.cpp  inf_int_test.h  main.cpp
OOP_Assignment2_VS/: inf_int.cpp  inf_int.h
QT_UI/: CMakeLists.txt  mainmenu.cpp  mainmenu.h  mainmenu.ui  ui_MainMenu.h
Submit/: README.txt
Submit/Prob1/: CMakeLists.txt  UIManager.h  inf_int.cpp  inf_int.h
Submit/Prob1/OOP_Assignment2_VS/: OOP_Assignment2_VS.sln  OOP_Assignment2_VS.vcxproj  main.cpp
Submit/Prob1/QT_UI/: mainmenu.cpp  mainmenu.ui
Submit/Report/: 객지프과제2-team8(Sans).pages
report/: 객지프과제2-team8(Sans).docx  객지프과제2-team8(Sans).pages
resources/: resources.qrc
